<resources>
    <string name="app_name">Aplicación Domótica</string>
    <string name="encender_apagar">Apagar/Encender</string>
    <string-array name="dispositivos_array">
        <item> </item>
        <item>TV</item>
        <item>Luces</item>
        <item>Persianas</item>
        <item>Termostato</item>
    </string-array>

    <string-array name="arrayIdiomas">
        <item>Español</item> <!-- Español -->
        <item>Italiano</item> <!-- Italiano -->
        <item>Francés</item> <!-- Francés -->
    </string-array>
    <string name="bienvenida_es" translatable="false">¡Bienvenido!</string>
    <string name="bienvenida_en" translatable="false">Welcome!</string>
    <string name="bienvenida_fr" translatable="false">Bienvenue!</string>
    <string name="idioma">Idioma:</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="modo_oscuro">Modo oscuro</string>
    <string name="guardar_cambios">GUARDAR CAMBIOS</string>
    <string name="encender_tv">Encender TV</string>
    <string name="volumen_50">Volumen: 50</string>
    <string name="borrar_dispositivo">Borrar Dispositivo</string>
    <string name="actualizar_firmware">Actualizar Firmware</string>
    <string name="crear_nueva_rutina">Crear Nueva Rutina</string>
    <string name="guardar_rutina">Guardar Rutina</string>
    <string name="hora_de_ejecuci_n">Hora de Ejecución</string>
    <string name="seleccionar_dispositivo">Seleccionar Dispositivo</string>
    <string name="encender_luces">Encender Luces</string>
    <string name="tv">TV</string>
    <string name="apagado">Apagado</string>
    <string name="persianas">Persianas</string>
    <string name="apertura_0">Apertura: 0%</string>
    <string name="luces">Luces</string>
    <string name="luces_apagadas">Luces Apagadas</string>
    <string name="termostato">Termostato</string>
    <string name="temperatura_0_c">Temperatura: 0ºC</string>
    <string name="conectar_otro_dispositivo">Conectar otro dispositivo</string>
    <string name="apagar_todo">Apagar todo</string>
    <string name="rutinas">Rutinas</string>
    <string name="control_de_persianas">Control de Persianas</string>
    <string name="rutinas_programadas">Rutinas Programadas</string>
    <string name="temperatura_25_c">Temperatura: 25°C</string>
    <string name="modificar">Modificar</string>
    <string name="borrar">Borrar</string>
    <string name="dispositivo_borrado">Dispositivo Borrado</string>
    <string name="actualizando_firmware_de_las_luces">Actualizando Firmware de las luces...</string>
    <string name="firmware_actualizado_correctamente">Firmware actualizado correctamente</string>
    <string name="conectando_dispositivo">Conectando Dispositivos...</string>
    <string name="todos_los_dispositivos_han_sido_apagados">Todos los dispositivos han sido apagados</string>
    <string name="actualizar_firmware_deTv">Actualizando firmware de la TV...</string>

</resources>