<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/btn_settings"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="64dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#FFFFFF" />

    <LinearLayout
        android:id="@+id/devices_container"
        android:layout_width="300dp"
        android:layout_height="331dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/btn_off"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Ejemplo de Dispositivo: TV -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#222222"
                android:text="@string/tv"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/tv_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/apagado"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/volume_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="0dp"
                android:text="@string/volumen_50"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Ejemplo de Dispositivo: Persianas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_blinds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#222222"
                android:text="@string/persianas"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/blinds_percentage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="0dp"
                android:text="@string/apertura_0"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Estado de Luces -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_lights"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#222222"
                android:text="@string/luces"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/light_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/luces_apagadas"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Estado del termostato -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_Termostato"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#222222"
                android:text="@string/termostato"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/termostato_Status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:text="@string/temperatura_0_c"
                android:textColor="#FFFFFF" />
        </LinearLayout>

        <!-- Otros dispositivos (Luces, etc.) -->
    </LinearLayout>

    <Button
        android:id="@+id/btn_connect_device"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#222222"
        android:text="@string/conectar_otro_dispositivo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_routines"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_off"
        android:layout_width="300dp"
        android:layout_height="47dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#222222"
        android:text="@string/apagar_todo"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/btn_connect_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_routines"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="28dp"
        android:backgroundTint="#222222"
        android:text="@string/rutinas"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>