<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".PersianasControlActivity">

    <!-- Título -->
    <TextView
        android:id="@+id/title_blinds"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/control_de_persianas"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Indicador de Porcentaje -->
    <TextView
        android:id="@+id/percentage_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/apertura_0"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_blinds" />

    <!-- SeekBar para ajustar el porcentaje -->
    <SeekBar
        android:id="@+id/seekbar_blinds"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:max="10"
        android:progress="0"
        android:progressTint="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/percentage_text" />

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="#222222"
        android:text="@string/borrar_dispositivo"
        android:textColor="#CB3E3E"
        app:layout_constraintEnd_toStartOf="@+id/buttonActualizar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_blinds"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonActualizar"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="232dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="#222222"
        android:text="@string/actualizar_firmware"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_blinds"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBarActualizar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:indeterminate="true"
        android:indeterminateTint="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/buttonActualizar"
        app:layout_constraintStart_toStartOf="@+id/buttonActualizar"
        app:layout_constraintTop_toBottomOf="@+id/buttonActualizar" />

</androidx.constraintlayout.widget.ConstraintLayout>
