<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LucesSettings"
    android:background="#000000">

    <Switch
        android:id="@+id/switch_luces"
        android:layout_width="209dp"
        android:layout_height="90dp"
        android:layout_marginTop="140dp"
        android:text="@string/encender_luces"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/buttonBorrar"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="#222222"
        android:text="@string/borrar_dispositivo"
        android:textColor="#CB3E3E"
        app:layout_constraintEnd_toStartOf="@+id/buttonActualizar"
        app:layout_constraintHorizontal_bias="0.243"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_luces"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buttonActualizar"
        android:layout_width="160dp"
        android:layout_height="70dp"
        android:layout_marginTop="232dp"
        android:backgroundTint="#222222"
        android:text="@string/actualizar_firmware"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/switch_luces"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/progressBarActualizar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:foregroundTint="#FFFFFF"
        android:indeterminate="true"
        android:indeterminateTint="#FFFFFF"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@+id/buttonActualizar"
        app:layout_constraintStart_toStartOf="@+id/buttonActualizar"
        app:layout_constraintTop_toBottomOf="@+id/buttonActualizar" />

</androidx.constraintlayout.widget.ConstraintLayout>

